--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -16,6 +17,7 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 psycopg2==2.9.2
 python-dotenv==0.19.2
+six==1.16.0
 SQLAlchemy==1.4.29
 Werkzeug==2.0.2
 WTForms==3.0.1
